--- a/app/mobile/src/main/res/layout/fragment_main_global.xml
+++ b/app/mobile/src/main/res/layout/fragment_main_global.xml
@@ -16,12 +16,13 @@
   -->
 
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFeedView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Global"
-        android:gravity="center" />
+        android:layout_height="match_parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
