Updated splash screen

--- a/app/src/main/res/drawable/mobile_splash_screen.xml
+++ b/app/src/main/res/drawable/mobile_splash_screen.xml
@@ -20,6 +20,6 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/mobile_splash_screen_image" />
+            android:src="@drawable/logo" />
     </item>
 </layer-list>
